samples/_failures_safe/1761085533_36ecaa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b811c29c.c: In function ‘main’:
./samples/SAFE/__tmp_b811c29c.c:161:25: error: ‘st’ undeclared (first use in this function)
  161 |                 fprintf(st
      |                         ^~
./samples/SAFE/__tmp_b811c29c.c:161:25: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_b811c29c.c:161:27: error: expected ‘)’ at end of input
  161 |                 fprintf(st
      |                        ~  ^
      |                           )
./samples/SAFE/__tmp_b811c29c.c:161:17: error: too few arguments to function ‘fprintf’
  161 |                 fprintf(st
      |                 ^~~~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_b811c29c.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:77:1: note: declared here
   77 | fprintf (FILE *__restrict __stream, const char *__restrict __fmt, ...)
      | ^~~~~~~
./samples/SAFE/__tmp_b811c29c.c:161:17: error: expected declaration or statement at end of input
  161 |                 fprintf(st
      |                 ^~~~~~~
./samples/SAFE/__tmp_b811c29c.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b811c29c.c:161:17: error: expected declaration or statement at end of input
